# it-helpdesk

./: .gitignore  .muttrc  LICENSE  README.md  account_phrases.txt  activate_venv.sh  approved_commands.txt  existing_users.txt  fdm_fetch.sh  get_request.py  get_request_email.py  get_request_email_with_log.py  get_request_with_logging.py  it_helpdesk_cfg.yaml  keywords.txt  parse_email.py  pyproject.toml  run_playbook.py  sample.txt  sample_email.txt  setup.py  storage_phrases.txt
ansible/: ansible.cfg  email_shell.yaml  help.yaml  increase_storage.yaml  invalid_request.yaml  inventory.yaml  manage_users.yaml  reply_email_October_10_2020.txt  storage.yaml  test.yaml
it-helpdesk/ansible/: ansible.cfg  email_shell.yaml  help.yaml
it-helpdesk/phrasebooks/: account_phrases.txt  help_phrases.txt  keywords.txt  manage_account_phrases.txt
it_helpdesk/: get_request_email.py  mail_script.py  request_parser.py  setup.py
it_helpdesk/ansible/: inventory  sample_email.txt  test.yaml
it_helpdesk/ansible/help_exemplars/: manage_users_help.txt
it_helpdesk/ansible/help_templates/: storage_help.txt
it_helpdesk/ansible/phrasebooks/: .keywords.txt  existing_users.txt  manage_users_phrases.txt
it_helpdesk/ansible/playbooks/: create_ticket.yaml  help.yaml  invalid_request.yaml  manage_users.yaml  (+2 more)
it_helpdesk/tests/: test_get_request_type.py  test_parsing.py  test_playbooks.py
phrasebooks/: keywords.txt  manage_users_phrases.txt
phrasebooks/vars/: manage_users_vars.ini
postfix/: main.cf  makedefs.out  master.cf  postfix-files  transport  transport.db  virtual  virtual.db
(+5 files in other folders)
